Fix manifest start_url for GitHub Pages

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "name": "SharkTrack",
     "short_name": "SharkTrack",
     "description": "Terenska aplikacija za bilježenje lokacija gradilišta",
-    "start_url": "/index.html",
+    "start_url": "/sharktrack/index.html",
+    "scope": "/sharktrack/",
     "display": "standalone",
     "background_color": "#0a0a1a",
     "theme_color": "#00d4ff",
