--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
     "start_url": "/sharktrack/index.html",
     "scope": "/sharktrack/",
     "display": "standalone",
-    "background_color": "#0a0a1a",
-    "theme_color": "#00d4ff",
+    "background_color": "#111111",
+    "theme_color": "#E67E22",
     "orientation": "portrait",
     "icons": [
         {
